# lib_license

./: .clang-format  .gitignore  CMakeLists.txt  README.md
all/: CMakeLists.txt
include/: liblicense.h
source/: liblicense.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: liblicense.cpp
